[project]
name = "mdhvf-octcube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.22.9",
    "einops>=0.8.2",
    "jaxtyping>=0.3.7",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydicom>=3.0.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
